--- a/src/components/headers/Header1/Header1.scss
+++ b/src/components/headers/Header1/Header1.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 60px;
+  height: 50px;
   width: 100%;
   padding-left: 25px;
   padding-right: 25px;
@@ -26,7 +26,7 @@
   .rightBlock {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     height: 100%;
 
     .rightBlock-span {
