--- a/src/components/buttons/ButtonSvg/ButtonSvg.scss
+++ b/src/components/buttons/ButtonSvg/ButtonSvg.scss
@@ -14,8 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    width: 20px;
+    height: 20px;
 
     svg {
       height: 16px;
