--- a/src/components/collection/record/Record.scss
+++ b/src/components/collection/record/Record.scss
@@ -16,6 +16,19 @@
         font-size: 14px;
         color: #7d8590;
       }
+
+      input {
+        width: 100%;
+        height: 40px;
+        margin: 0;
+        padding: 0;
+        font-size: 14px;
+        outline: none;
+        border-radius: 8px;
+        background-color: rgba(255, 255, 255, 0);
+        border: 1px solid rgba(255, 255, 255, 0);
+        color: #7d8590;
+      }
     }
 
     .recordData {
@@ -29,6 +42,18 @@
       padding-left: 10px;
       border-radius: 8px;
       cursor: copy;
+
+      input {
+        width: 100%;
+        height: 40px;
+        margin: 0;
+        padding: 0;
+        outline: none;
+        border-radius: 8px;
+        background-color: rgba(255, 255, 255, 0);
+        border: 1px solid rgba(255, 255, 255, 0);
+        color: #fff;
+      }
     }
   }
 }
