--- a/src/components/collection/record/Record.scss
+++ b/src/components/collection/record/Record.scss
@@ -1,117 +1,112 @@
-.viewRecordInGroup-desktop {
+.Record-desktopUI {
   background-color: #010409;
   padding: 25px;
   overflow: auto;
 
-  .inner-viewRecordInGroup {
+  .inner-Record-desktopUI {
     width: 100%;
 
-    .recordName {
+    // HEADER
+    .header {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      height: 25px;
       width: 100%;
-
-      span {
-        font-size: 14px;
-        color: #7d8590;
-      }
-
-      input {
-        width: 100%;
-        height: 40px;
-        margin: 0;
-        padding: 0;
-        font-size: 14px;
-        outline: none;
-        border-radius: 8px;
-        background-color: rgba(255, 255, 255, 0);
-        border: 1px solid rgba(255, 255, 255, 0);
-        color: #7d8590;
-      }
-    }
-
-    .recordData {
-      display: flex;
-      align-items: center;
       height: 40px;
-      width: 100%;
+      padding-bottom: 5px;
       margin-bottom: 10px;
-      background-color: #0d1117;
-      border: 1px solid #21262d;
-      padding-left: 10px;
-      border-radius: 8px;
-      cursor: copy;
+      border-bottom: 1px solid #21262d;
 
-      input {
-        width: 100%;
-        height: 40px;
-        margin: 0;
-        padding: 0;
-        outline: none;
-        border-radius: 8px;
-        background-color: rgba(255, 255, 255, 0);
-        border: 1px solid rgba(255, 255, 255, 0);
+      .name {
+        font-size: 18px;
         color: #fff;
+        font-weight: 600;
+        width: 100%;
+
+        .headerInputName {
+          width: 100%;
+          height: 100%;
+          background-color: rgba(255, 255, 255, 0);
+          border: none;
+          outline: none;
+          color: #fff;
+          font-weight: 600;
+          font-size: 18px;
+          margin: 0;
+          padding: 0;
+        }
+      }
+
+      .buttons {
+        display: flex;
+        align-items: center;
+        height: 100%;
+
+        .buttonBlock {
+          margin-left: 5px;
+        }
       }
     }
-  }
-}
 
-//
-// Mobile
-//
-
-.viewRecordInGroupContainer-mobile {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(110, 118, 129, 0.4);
-
-  .viewRecordInGroup-mobile {
-    width: 100%;
-    min-width: 300px;
-    max-width: 100vw;
-    min-height: 400px;
-    max-height: calc(100vh - 80px);
-    margin: 20px;
-    background-color: #010409;
-    padding: 25px;
-    overflow: auto;
-    border-radius: 16px;
-  }
-
-  .inner-viewRecordInGroup {
-    width: 100%;
-
-    .recordName {
-      display: flex;
-      align-items: center;
-      height: 25px;
-      width: 100%;
-
-      span {
+    // Content
+    .viewContent {
+      .name {
+        display: flex;
+        align-items: center;
         font-size: 14px;
         color: #7d8590;
-      }
-    }
+        width: 100%;
+        height: 25px;
 
-    .recordData {
-      display: flex;
-      align-items: center;
-      height: 40px;
-      width: 100%;
-      margin-bottom: 10px;
-      background-color: #0d1117;
-      border: 1px solid #21262d;
-      padding-left: 10px;
-      border-radius: 8px;
-      cursor: copy;
+        .viewContentNameInput {
+          width: 100%;
+          height: 25px;
+          margin: 0;
+          padding: 0;
+          font-size: 14px;
+          outline: none;
+          background-color: rgba(255, 255, 255, 0);
+          border: none;
+          color: #7d8590;
+        }
+      }
+
+      .data {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 41px;
+        width: 100%;
+        margin-bottom: 10px;
+        background-color: #0d1117;
+        border: 1px solid #21262d;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 8px;
+        font-size: 16px;
+
+        .viewContentDataInput {
+          width: 100%;
+          height: 41px;
+          margin: 0;
+          padding: 0;
+          outline: none;
+          background-color: rgba(255, 255, 255, 0);
+          border: none;
+          font-size: 16px;
+          color: #fff;
+        }
+
+        .buttons {
+          display: flex;
+          align-items: center;
+          height: 100%;
+
+          .buttonBlock {
+            margin-left: 5px;
+          }
+        }
+      }
     }
   }
 }
