refact record block

--- a/src/components/buttons/ButtonSvg/ButtonSvg.scss
+++ b/src/components/buttons/ButtonSvg/ButtonSvg.scss
@@ -16,10 +16,15 @@
     justify-content: center;
     width: 20px;
     height: 20px;
+    color: #8b949e;
 
     svg {
       height: 16px;
       width: 16px;
+      fill: #8b949e;
+    }
+
+    img {
       fill: #8b949e;
     }
   }
