--- a/src/components/form/formContainers/Form.scss
+++ b/src/components/form/formContainers/Form.scss
@@ -23,4 +23,10 @@
     font-size: 16px;
     cursor: pointer;
   }
+
+  .errorBlock {
+    margin-top: 15px;
+    color: #ff5c3a;
+    font-size: 14px;
+  }
 }
