--- a/src/components/headers/Header2/Header2.scss
+++ b/src/components/headers/Header2/Header2.scss
@@ -1,9 +1,9 @@
-.header2 {
+.Header2 {
   width: 100%;
   height: 40px;
   margin-bottom: 10px;
 
-  .inner-header2 {
+  .inner-Header2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,20 +12,31 @@
     padding-bottom: 5px;
     border-bottom: 1px solid #21262d;
 
-    .logo {
-      .logo-span {
-        font-size: 18px;
+    .title {
+      font-size: 18px;
+      color: #fff;
+      font-weight: 600;
+      width: 100%;
+
+      input {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0);
+        border: none;
+        outline: none;
         color: #fff;
         font-weight: 600;
+        font-size: 18px;
+        margin: 0;
+        padding: 0;
       }
     }
 
     .buttonBlock {
       display: flex;
-      align-items: center;
-      height: 100%;
+      flex-direction: row;
 
-      .buttonBlock-span {
+      & > * {
         margin-left: 5px;
       }
     }
