--- a/src/pages/collections/index.scss
+++ b/src/pages/collections/index.scss
@@ -1,6 +1,6 @@
 .gridContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1.5fr;
+  grid-template-columns: 300px 400px 1fr;
   height: calc(100vh - 50px);
 }
 
