add form and input components

--- a/src/mainStyle.scss
+++ b/src/mainStyle.scss
@@ -84,7 +84,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background-color: rgba(22, 28, 36, 0.95);
+  background-color: #161c24;
 
   @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
   font-family: 'Roboto', sans-serif;
