--- a/src/componentsNew/sidebars/SidebarDefault/SidebarDefault.scss
+++ b/src/componentsNew/sidebars/SidebarDefault/SidebarDefault.scss
@@ -1,8 +1,9 @@
-.Group {
+.SidebarDefault {
   position: relative;
   width: 100%;
   height: 100%;
   border-right: 1px dashed #2b333b;
+  z-index: 11;
 
   .addButtonContainer {
     position: absolute;
