--- a/src/componentsNew/ContextMenu/ContextMenu.scss
+++ b/src/componentsNew/ContextMenu/ContextMenu.scss
@@ -10,7 +10,7 @@
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 2px 0px, rgba(0, 0, 0, 0.24) -20px 20px 40px -4px;
 
-  backdrop-filter: blur(20px);
+  // backdrop-filter: blur(20px);
   background-image: url(https://minimals.cc/assets/cyan-blur.png), url(https://minimals.cc/assets/red-blur.png);
   background-repeat: no-repeat, no-repeat;
   background-position: right top, left bottom;
