--- a/src/mainStyle.scss
+++ b/src/mainStyle.scss
@@ -86,7 +86,7 @@ body {
   line-height: 1.5;
   background-color: #161c24;
 
-  backdrop-filter: blur(20px);
+  // backdrop-filter: blur(20px);
   background-image: url(https://minimals.cc/assets/cyan-blur.png), url(https://minimals.cc/assets/red-blur.png);
   background-repeat: no-repeat, no-repeat;
   background-position: right top, left bottom;
