--- a/src/pages/collections/collectionTable/CollectionTable.scss
+++ b/src/pages/collections/collectionTable/CollectionTable.scss
@@ -1,4 +1,4 @@
-.TableDefault-Container {
+.CollectionTable-Container {
   margin: 200px 30px 200px 30px;
   position: relative;
   background-color: rgb(33, 43, 54);
@@ -7,7 +7,7 @@
   border-radius: 16px;
   min-height: 400px;
 
-  .TableDefault {
+  .CollectionTable {
     table {
       display: table;
       width: 100%;
