--- a/src/componentsNew/loaders/LoaderDefault/LoaderDefault.scss
+++ b/src/componentsNew/loaders/LoaderDefault/LoaderDefault.scss
@@ -10,7 +10,7 @@
   z-index: 100;
   background-color: rgba(22, 28, 36, 0.8);
 
-  background-image: url(https://minimals.cc/assets/cyan-blur.png), url(https://minimals.cc/assets/red-blur.png);
+  background-image: url(../../../assets/cyan-blur.png), url(../../../assets/red-blur.png);
   background-repeat: no-repeat, no-repeat;
   background-position: right top, left bottom;
   background-size: 50%, 50%;
