--- a/src/mainStyle.scss
+++ b/src/mainStyle.scss
@@ -87,7 +87,7 @@ body {
   background-color: #161c24;
 
   // backdrop-filter: blur(20px);
-  background-image: url(https://minimals.cc/assets/cyan-blur.png), url(https://minimals.cc/assets/red-blur.png);
+  background-image: url(assets/cyan-blur.png), url(assets/red-blur.png);
   background-repeat: no-repeat, no-repeat;
   background-position: right top, left bottom;
   background-size: 50%, 50%;
