--- a/src/componentsNew/forms/FormLogin/FormLogin.scss
+++ b/src/componentsNew/forms/FormLogin/FormLogin.scss
@@ -1,4 +1,4 @@
-.FormDefault-Container {
+.FormLogin-Container {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@
   background-position: right top, left bottom;
   background-size: 50%, 50%;
 
-  .FormDefault {
+  .FormLogin {
     min-width: 300px;
     width: 100%;
     max-width: 700px;
@@ -45,16 +45,7 @@
     }
 
     .buttonBlock {
-      display: flex;
-      -webkit-box-align: center;
-      align-items: center;
-      -webkit-box-pack: end;
-      justify-content: flex-end;
       padding: 24px;
-
-      & > * {
-        margin-left: 10px;
-      }
     }
 
     .errorText {
