--- a/src/componentsNew/sidebars/SidebarDefault/SidebarDefault.scss
+++ b/src/componentsNew/sidebars/SidebarDefault/SidebarDefault.scss
@@ -25,8 +25,21 @@
     }
   }
 
+  .OptionalButtons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 16px;
+    width: calc(100%);
+    height: 50px;
+
+    & > * {
+      margin-left: 10px;
+    }
+  }
+
   .inner-Group {
-    margin: 60px 16px;
+    margin: 20px 16px;
 
     .groupButton {
       display: flex;
