--- a/src/pages/auth/AuthStyle.scss
+++ b/src/pages/auth/AuthStyle.scss
@@ -1,19 +1,13 @@
-.authContainer {
-  margin: 0 auto;
-  max-width: 400px;
-  margin-top: 130px;
+.AuthForm-Link {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  color: #fff;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
-  .link {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
+  a {
     color: #fff;
-    font-size: 14px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-
-    a {
-      color: #fff;
-    }
   }
 }
