--- a/src/pages/collections/collectionTable/CollectionTable.scss
+++ b/src/pages/collections/collectionTable/CollectionTable.scss
@@ -1,5 +1,5 @@
 .CollectionTable-Container {
-  margin: 200px 30px 200px 30px;
+  margin: 20px 40px;
   position: relative;
   background-color: rgb(33, 43, 54);
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -61,6 +61,10 @@
             color: rgb(255, 255, 255);
           }
 
+          .click {
+            cursor: pointer;
+          }
+
           .buttonContainer {
             position: relative;
             display: flex;
@@ -70,6 +74,10 @@
             & > * {
               margin-left: 10px;
             }
+          }
+
+          &:hover {
+            background-color: rgba(145, 158, 171, 0.08);
           }
         }
       }
