--- a/src/components/ContextMenu/ContextMenu.scss
+++ b/src/components/ContextMenu/ContextMenu.scss
@@ -1,7 +1,27 @@
+.ContextMenu-Container-LeftPosition {
+  top: -8px;
+  right: 44px;
+
+  .pointer {
+    right: -6.5px;
+    top: 20px;
+    clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
+  }
+}
+
+.ContextMenu-Container-TopPosition {
+  top: 44px;
+  right: -8px;
+
+  .pointer {
+    right: 20px;
+    top: -6.5px;
+    clip-path: polygon(100% 100%, 0% 100%, 100% 0%);
+  }
+}
+
 .ContextMenu-Container {
   position: absolute;
-  top: 8px;
-  right: 60px;
   min-width: 140px;
   min-height: 30px;
   padding: 4px;
@@ -10,25 +30,21 @@
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 2px 0px, rgba(0, 0, 0, 0.24) -20px 20px 40px -4px;
 
-  // backdrop-filter: blur(20px);
   background-image: url(https://minimals.cc/assets/cyan-blur.png), url(https://minimals.cc/assets/red-blur.png);
   background-repeat: no-repeat, no-repeat;
   background-position: right top, left bottom;
   background-size: 50%, 50%;
-  z-index: 10;
+  z-index: 100;
 
   .pointer {
     width: 14px;
     height: 14px;
     position: absolute;
     border-bottom-left-radius: 3.5px;
-    clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     border: 1px solid rgba(0, 0, 0, 0.12);
     backdrop-filter: blur(6px);
     background-color: rgba(33, 43, 54, 0.8);
-    right: -6.5px;
     transform: rotate(-135deg);
-    top: 20px;
   }
 
   ul {
@@ -46,6 +62,7 @@
       margin: 0px;
       padding: 6px 8px;
       background-color: transparent;
+      white-space: nowrap;
       text-decoration: none;
       border-radius: 6px;
       color: rgb(255, 255, 255);
@@ -94,6 +111,7 @@
   border-radius: 50%;
   color: rgb(145, 158, 171);
   transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  z-index: 100;
 
   span {
     position: relative;
@@ -112,4 +130,11 @@
 .ContextMenuButton-Active {
   color: rgb(255, 255, 255);
   transition: color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.ContextMenu-MainContainer {
+  position: relative;
+  width: 36px;
+  height: 36px;
+  z-index: 100;
 }
