add edit, create, delete records and groups

--- a/src/components/ButtonSidebar/ButtonSidebar.scss
+++ b/src/components/ButtonSidebar/ButtonSidebar.scss
@@ -40,7 +40,7 @@
     .text {
       line-height: 1.57143;
       font-size: 0.875rem;
-      text-transform: capitalize;
+      // text-transform: capitalize;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
