--- a/src/App.scss
+++ b/src/App.scss
@@ -67,26 +67,30 @@ svg {
   max-height: 100%;
 }
 
-body {
-  // overflow: hidden;
-}
+// body {
+// overflow: hidden;
+// }
 
 /* ROOT */
 
-* {
-  // user-select: none;
-}
+// * {
+// user-select: none;
+// }
 
 #root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
   min-width: 350px;
-  height: 100vh;
-  // overflow: hidden;
+  overflow: hidden;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   background-color: #161c24;
 
-  // backdrop-filter: blur(20px);
   background-image: url(assets/cyan-blur.png), url(assets/red-blur.png);
   background-repeat: no-repeat, no-repeat;
   background-position: right top, left bottom;
@@ -96,9 +100,4 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #fff;
-
-  #innerRoot {
-    width: 100%;
-    height: 100%;
-  }
 }
