--- a/src/pages/auth/login.page.module.scss
+++ b/src/pages/auth/login.page.module.scss
@@ -10,7 +10,7 @@
     padding: 20px;
     width: 100%;
     height: 100%;
-    background-color: #6b4040;
+    background-color: rgb(33, 43, 54);
     border-radius: 44px;
 
     .content {
@@ -36,7 +36,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #000;
+      // background-color: #000;
       border-radius: 44px;
     }
   }
