--- a/src/layouts/main.layout.module.scss
+++ b/src/layouts/main.layout.module.scss
@@ -115,6 +115,7 @@
 
   .content {
     position: relative;
-    background-color: black;
+    padding: 10px;
+    // background-color: black;
   }
 }
