--- a/src/layouts/main.layout.module.scss
+++ b/src/layouts/main.layout.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 280px 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 100vh;
   width: 100%;
   height: 100%;
 
@@ -115,7 +115,7 @@
 
   .content {
     position: relative;
-    padding: 10px;
+    padding: 0 10px;
     // background-color: black;
   }
 }
