--- a/src/pages/data/list.page.module.scss
+++ b/src/pages/data/list.page.module.scss
@@ -17,128 +17,10 @@
   }
 }
 
-.tableContainer {
-  width: calc(100vw - 300px);
-  height: calc(100vh - 90px);
-  background-color: rgb(33, 43, 54);
-  border-radius: 16px;
-  overflow: scroll;
+.tableRowName {
+  cursor: pointer;
 
-  &::before {
-    content: ' ';
-    display: table;
+  &:hover {
+    text-decoration: underline;
   }
-
-  table {
-    display: table;
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0px;
-    min-width: 960px;
-
-    thead {
-      display: table-header-group;
-
-      tr {
-        color: inherit;
-        display: table-row;
-        vertical-align: middle;
-        outline: 0px;
-
-        th {
-          line-height: 1.5rem;
-          font-family: 'Public Sans', sans-serif;
-          display: table-cell;
-          vertical-align: inherit;
-          border-bottom: 1px dashed rgb(46, 50, 54);
-          text-align: left;
-          padding: 16px;
-          font-size: 14px;
-          color: rgb(145, 158, 171);
-          font-weight: 600;
-          background-color: rgba(145, 158, 171, 0.12);
-          width: 200px;
-        }
-      }
-    }
-
-    tbody {
-      display: table-row-group;
-
-      tr {
-        color: inherit;
-        display: table-row;
-        vertical-align: middle;
-        outline: 0px;
-
-        td {
-          line-height: 1.57143;
-          font-size: 0.875rem;
-          font-family: 'Public Sans', sans-serif;
-          font-weight: 400;
-          display: table-cell;
-          vertical-align: inherit;
-          border-bottom: 1px dashed rgb(46, 50, 54);
-          text-align: left;
-          padding: 16px;
-          color: rgb(255, 255, 255);
-          white-space: nowrap;
-          width: 200px;
-        }
-      }
-    }
-  }
-
-  // .tableRow_head {
-  //   display: flex;
-  //   align-items: center;
-  //   width: 100%;
-  //   background-color: rgba(145, 158, 171, 0.12);
-
-  //   .tableColumn {
-  //     display: flex;
-  //     align-items: center;
-  //     padding: 16px;
-  //   }
-  // }
-
-  // .tableRow_body {
-  //   display: flex;
-  //   align-items: center;
-  //   flex-direction: column;
-  //   width: 100%;
-
-  //   .tableColumn_container {
-  //     position: relative;
-  //     display: flex;
-  //     align-items: center;
-  //     width: 100%;
-
-  // .tableColumn {
-  //   display: flex;
-  //   align-items: center;
-  //   padding: 16px;
-  // }
-
-  // .tableColumn[data-size='100px'] {
-  //   min-width: 100px;
-  // }
-
-  // .tableColumn[data-position='end'] {
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: end;
-  //   min-width: 100px;
-  //   height: 100%;
-  // }
-
-  // &:hover {
-  //   background-color: rgba(145, 158, 171, 0.08);
-  //   cursor: pointer;
-  // }
-  //   }
-  // }
 }
