add: auto focus on input password decrypt and new passCollectio name

--- a/src/components/table.component.module.scss
+++ b/src/components/table.component.module.scss
@@ -3,6 +3,10 @@
   border-radius: 16px;
   overflow: scroll;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   &::before {
     content: ' ';
     display: table;
@@ -118,7 +122,6 @@
   //   height: 100%;
   // }
 
-  
   //   }
   // }
 }
