--- a/src/layouts/main.layout.module.scss
+++ b/src/layouts/main.layout.module.scss
@@ -8,6 +8,7 @@
   .nav {
     padding-bottom: 45px;
     position: relative;
+    border-right: 1px dashed rgba(145, 158, 171, 0.2);;
 
     .logo {
       display: flex;
