--- a/src/pages/data/edit.page.module.scss
+++ b/src/pages/data/edit.page.module.scss
@@ -36,6 +36,30 @@
       display: none;
     }
 
+    .notSetIndexCollection {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+
+      .svgContainer {
+        width: 70px;
+        height: 70px;
+        color: rgb(145, 158, 171);
+        margin-bottom: 20px;
+      }
+
+      span {
+        font-size: 1.5em;
+        color: rgb(145, 158, 171);
+        text-align: center;
+      }
+    }
+
+    //
+
     .sidebar_container {
       color: rgb(99, 115, 129);
 
@@ -68,5 +92,28 @@
       display: block;
     }
     // background-color: red;
+  }
+}
+
+.addButton {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
+  border-top: 1px dashed rgba(145, 158, 171, 0.2);
+  border-bottom: 1px dashed rgba(145, 158, 171, 0.2);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+
+  .svgContainer {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+  }
+
+  &:hover {
+    background-color: rgba(145, 158, 171, 0.2);
   }
 }
