--- a/src/pages/admin/admin.page.module.scss
+++ b/src/pages/admin/admin.page.module.scss
@@ -1,7 +1,3 @@
-.main {
-  margin-top: 10px;
-}
-
 .claimContainer {
   display: inline-block;
   min-width: 200px;
@@ -11,10 +7,10 @@
   margin-top: 10px;
 
   .access {
-    color: rgb(34, 197, 94);;
+    color: rgb(34, 197, 94);
   }
 
   .close {
-    color: rgb(255, 86, 48);;
+    color: rgb(255, 86, 48);
   }
 }
